# Main BUILD.gn that contains all the targets

# Build everything except test stuff
group("all") {
  testonly = false
  deps = [
    ":check_simd",
    ":logger",
    ":loglib",
  ]
}

# check_simd and logger app
group("check_simd_all") {
  deps = [
    ":check_simd",
    ":logger"
  ]
}

# Test Hello World applications
group("hello_all") {
  testonly = true
  deps = [
    "//test:hello",
    "//test:hello_shared",
    "//test:hello_static"
  ]
}

# The main application
executable("check_simd") {
  sources = [
    "check_simd/check_simd.cc",
    "check_simd/check_simd.h"
  ]
  configs += [ "//build/config:no_div_by_zero" ]
  deps = [ ":loglib" ]
}

# Standalone logger target
executable("logger") {
  defines = [ "STANDALONE_LOGGER=1" ]
  sources = [
    "logger/logger_main.cc",
    "logger/logger_main.h"
  ]
  configs += [ "//build/config:no_div_by_zero" ]
  deps = [
    "//base",
    ":loglib",
  ]
}

# Shared source files between logger and check_simd
shared_library("loglib") {
  if (is_standalone_logger) {
    defines = [ "STANDALONE_LOGGER=1" ]
  }
  sources = [
    "logger/libexport.h",
    "logger/logger.cc",
    "logger/logger.h",
    "base/dcheck.h"
  ]
  configs += [ "//build/config:no_div_by_zero" ]
  deps = [ "//base" ]
  if (is_win) {
    output_name = "liblog.dll"
  } else if (is_linux) {
    output_name = "liblog"
  } else if (is_mac) {
    outputs = "liblog.dylib"
  } else {
    output_name = "liblog"
  }
}
