source_set("base") {
  sources = [
    "buildflag.h",
    "check.h",
    "check_op.h",
    "compiler_specific.h",
    "dcheck.h",
    "export.h",
    "file_util.h",
    "immediate_crash.h",
    "logging.cc",
    "logging.h",
    "notreached.h",
    "posix/eintr_wrapper.h",
    "posix/safe_strerror.cc",
    "posix/safe_strerror.h",
    "rand_util.cc",
    "rand_util.h",
    "strings/icu/icu_utf.cc",
    "strings/icu/icu_utf.h",
    "strings/string_piece.h",
    "strings/stringprintf.cc",
    "strings/stringprintf.h",
    "strings/string_util.cc",
    "strings/string_util.h",
    "strings/string_util_posix.h",
    "strings/utf_string_conversions.cc",
    "strings/utf_string_conversions.h",
    "strings/utf_string_conversion_utils.cc",
    "strings/utf_string_conversion_utils.h",
  ]
  if (is_win) {
    libs = [ "advapi32.lib" ]
  }

  public_deps = [ "../build" ]
}
